--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.6.1
   flutter_svg: ^2.0.1
+  hive: ^2.2.3
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
