--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,20 @@ dependencies:
   build_runner: ^2.3.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.12
+  flutter_launcher_icons: ^0.12.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
+  remove_alpha_ios: true
+  min_sdk_android: 21 # android min sdk min:16, default 21
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
